--- a/projeto-itegrador-2semestre-fatec/Views/Login/Index.cshtml
+++ b/projeto-itegrador-2semestre-fatec/Views/Login/Index.cshtml
@@ -1,8 +1,19 @@
 ﻿@{
     ViewData["Title"] = "Login";
 }
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    
-</div>
+<h2>Login</h2>
+<form asp-action="Index" method="post">
+    <div class="text-center">
+        <label>E-mail</label>
+        <input name="email" />
+    </div>
+    <div class="text-center">
+        <label>Senha</label>
+        <input type="password" name="senha" />
+    </div>
+    <button type="submit">Entrar</button>
+</form>
+@if (ViewBag.Erro != null)
+{
+    <div class="alert alert-danger">@ViewBag.Erro</div>
+}
