--- a/projeto-itegrador-2semestre-fatec/Views/Login/Index.cshtml
+++ b/projeto-itegrador-2semestre-fatec/Views/Login/Index.cshtml
@@ -28,7 +28,7 @@
                         <p id="errorLogin">@ViewBag.Erro</p>
                     }
                     <button class="button-primary" type="submit">Entrar</button>
-                    <a class="button-secondary" href="/Cadastro/Index">Criar conta</a>
+                    <a class="button-secondary button-anchor" href="/Cadastro/Index">Criar conta</a>
                     <!-- <button class="button-ghost">Esqueci minha senha</button> -->
                 </div>
             </section>
