--- a/projeto-itegrador-2semestre-fatec/wwwroot/css/login.css
+++ b/projeto-itegrador-2semestre-fatec/wwwroot/css/login.css
@@ -1,190 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-
-
-.header-container {
-    height: 100px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-input {
-    border: 1px solid rgb(122, 122, 122);
-}
-
-.nav-container {
-    height: 60px;
-    background-color: #b20000;
-    color: white;
-    font-weight: bold;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 5px;
-}
-
-.footer-container {
-    height: 80px;
-    background-color: black;
-    width: 100%;
-    display: flex;
-}
-
-.content-container {
-    min-height: calc(100vh - 180px);
-    padding: 40px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.logo-container {
-    display: flex;
-    width: 100%;
-    padding: 20px 40px 0px;
-    img
-
-{
-    align-items: center;
-    justify-content: center;
-    width: 120px;
-}
-
-}
-
-.logo-footer-container {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.section-rounded {
-    border: 2px black solid;
-    border-radius: 8px;
-    padding: 70px 60px;
-    width: 100%;
-    max-width: 700px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.input-container {
-    width: 300px;
-}
-
-.label-container {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    width: 100%;
-    input, select
-
-{
-    width: 100%;
-    padding: 12px 12px;
-}
-
-}
-
-
-
-.button-primary {
-    padding: 16px 48px;
-    color: white;
-    font-weight: bold;
-    text-transform: uppercase;
-    border: none;
-    background-color: #b20000;
-    border-radius: 22px;
-    min-width: 250px;
-}
-
-button:hover {
-    cursor: pointer;
-}
-
-.button-primary:hover {
-    background-color: #7a0202;
-}
-
-.button-secondary {
-    padding: 16px 48px;
-    color: white;
-    font-weight: bold;
-    text-transform: uppercase;
-    border: none;
-    background-color: #a3a3a3;
-    border-radius: 22px;
-    min-width: 250px;
-}
-
-    .button-secondary:hover {
-        background-color: #747474;
-    }
-
-.button-square {
-    padding: 16px 48px;
-    font-weight: bold;
-    text-transform: uppercase;
-    border: none;
-    min-width: 250px;
-    background-color: white;
-    border: 2px black solid;
-}
-
-    .button-square:hover {
-        background-color: #e2e2e2;
-    }
-
-.button-ghost {
-    padding: 16px 48px;
-    font-weight: bold;
-    text-transform: uppercase;
-    background-color: white;
-    border: none;
-    min-width: 250px;
-}
-
-    .button-ghost:hover {
-        text-decoration: underline;
-    }
-
-.avatar-container {
-    img
-
-{
-    width: 60px;
-}
-
-;
-}
-
-.section-icon {
-    width: fit-content;
-    padding: 42px;
-}
-
-.h1-container {
-    width: 100%;
-    max-width: 700px;
-    padding: 12px;
-}
-
-h1 {
-    font-size: 24px;
-}
-
 .input-login-container {
     display: flex;
     flex-direction: column;
@@ -196,66 +9,30 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    .button-ghost
-
-{
-    padding: 0;
-    font-size: 11px;
 }
 
-p {
-    margin: 0 auto;
-}
+    .btn-login-container .button-ghost {
+        padding: 0;
+        font-size: 11px;
+    }
 
-}
+    .btn-login-container p {
+        margin: 0 auto;
+    }
 
-.section-rounded-comp {
-    border: 2px black solid;
-    border-radius: 8px;
-    padding: 70px 60px;
+.h1-container {
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    max-width: 700px;
+    padding: 12px;
 }
 
-.modal-container {
+#errorinput {
+    color: red;
     display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: rgba(53, 53, 53, 0.85);
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    z-index: 1000;
-    section
-
-{
-    background-color: white;
-    h3
-
-{
-    margin-bottom: 8px;
 }
 
-.btn-modal-container {
-    display: flex;
-    flex-direction: column;
-    gap: 8px;
-    button
-
-{
-    background-color: #e4e4e4;
-}
-
-button:hover {
-    background-color: #b9b9b9;
-}
-
-}
-}
+#errorLogin {
+    color: red;
 }
 
 @media (max-width: 535px) {
@@ -270,28 +47,7 @@ button:hover {
 
     .button-primary, .button-secondary, .button-ghost, .button-square {
         min-width: auto;
-        padding-right: 0px;
         padding-left: 0px;
+        padding-right: 0px;
     }
-
-    .section-rounded-comp {
-        padding: 32px 16px;
-        width: calc(100vw - 24px);
-        max-width: 374px;
-    }
-}
-
-@media (max-width: 378px) {
-    .content-container {
-        padding: 16px;
-    }
-}
-
-#errorinput {
-    color: red;
-    display: none;
-}
-
-#errorLogin{
-    color: red;
 }
