--- a/projeto-itegrador-2semestre-fatec/Views/Cadastro/Index.cshtml
+++ b/projeto-itegrador-2semestre-fatec/Views/Cadastro/Index.cshtml
@@ -15,19 +15,19 @@
             <div id="form1">
                 <label class="label-container" for="nome">
                     Nome
-                    <input type="text" id="nome" onblur="handleField(this)" asp-for="cadastroAluno.nome">
+                    <input type="text" id="nome"  asp-for="cadastroAluno.nome">
                     <p id="errorNome"></p>
                 </label>
 
                 <label class="label-container" for="email">
                     E-mail:
-                    <input type="email" id="email" onblur="handleField(this)" asp-for="cadastroAluno.email">
+                    <input type="email" id="email"  asp-for="cadastroAluno.email">
                     <p id="errorEmail"></p>
                 </label>
 
                 <label class="label-container" for="telefone">
                     Telefone:
-                    <input type="text" id="telefone" onblur="handleField(this)" asp-for="cadastroAluno.telefone">
+                    <input type="text" id="telefone"  asp-for="cadastroAluno.telefone">
                     <p id="errorTelefone"></p>
                 </label>
             </div>
@@ -35,19 +35,19 @@
             <div id="form1">
                 <label class="label-container" for="CPF">
                     CPF:
-                    <input type="text" id="CPF" onblur="handleField(this)" asp-for="cadastroAluno.cpf">
+                    <input type="text" id="CPF"  asp-for="cadastroAluno.cpf">
                     <p id="errorCPF"></p>
                 </label>
 
                 <label class="label-container" for="RA">
                     RA:
-                    <input type="text" id="RA" onblur="handleField(this)" asp-for="cadastroAluno.ra">
+                    <input type="text" id="RA"  asp-for="cadastroAluno.ra">
                     <p id="errorRA"></p>
                 </label>
 
                 <label class="label-container" for="RG">
                     RG:
-                    <input type="text" id="RG" onblur="handleField(this)" asp-for="cadastroAluno.rg">
+                    <input type="text" id="RG"  asp-for="cadastroAluno.rg">
                     <p id="errorRG"></p>
                 </label>
             </div>
@@ -55,10 +55,10 @@
             <div id="form2">
                 <label class="label-container" for="curso">
                     Curso:
-                    <select name="curso" id="curso" onblur="handleField(this)" asp-for="cadastroAluno.idCurso">
+                    <select asp-for="cadastroAluno.idCurso">
                         @foreach (var curso in Model.curso)
                         {
-                            <option value="@curso.id">@curso.nome</option>
+                            <option value="@curso.id">@curso.nome - @curso.id</option>
                         }
                     </select>
                     <p id="errorCurso"></p>
@@ -66,7 +66,7 @@
 
                 <label class="label-container" for="semestre">
                     Semestre:
-                    <select name="semestre" id="semestre" onblur="handleField(this)" asp-for="cadastroAluno.semestre">
+                    <select name="semestre" id="semestre"  asp-for="cadastroAluno.semestre">
                         <option value="1">1º semestre</option>
                         <option value="2">2º semestre</option>
                         <option value="3">3º semestre</option>
@@ -79,7 +79,7 @@
 
                 <label class="label-container" for="periodo">
                     Periodo:
-                    <select name="periodo" id="periodo" onblur="handleField(this)" asp-for="cadastroAluno.periodo">
+                    <select name="periodo" id="periodo"  asp-for="cadastroAluno.periodo">
                         <option value="matutino">Matutino</option>
                         <option value="vespertino">Vespertino</option>
                         <option value="noturno">Noturno</option>
@@ -91,19 +91,19 @@
             <div id="form1">
                 <label class="label-container" for="senha">
                     Senha:
-                    <input type="password" id="senha" onblur="handleField(this)" asp-for="cadastroAluno.senha" />
+                    <input type="password" id="senha"  asp-for="cadastroAluno.senha" />
                     <p id="errorSenha1"></p>
                 </label>
 
                 <label class="label-container" for="confirme">
                     Confirme sua senha:
-                    <input type="password" id="confirme" onblur="handleField(this), handleConfirmacao()" asp-for="cadastroAluno.confirmeSenha" />
+                    <input type="password" id="confirme" asp-for="cadastroAluno.confirmeSenha" />
                     <p id="errorSenha"></p>
                 </label>
             </div>
 
             <div id="botoes">
-                <button type="submit" class="button-primary" id="botao" onclick="handleCreateAccount()">CRIAR CONTA</button>
+                <button type="submit" class="button-primary" id="botao">CRIAR CONTA</button>
             </div>
         </form>
     </section>
