--- a/projeto-itegrador-2semestre-fatec/Views/Shared/_Layout.cshtml
+++ b/projeto-itegrador-2semestre-fatec/Views/Shared/_Layout.cshtml
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/cadastro.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/component.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/perfil.css" asp-append-version="true" />
+    @await RenderSectionAsync("Styles", required: false)
 </head>
 <body>
         <header class="header-container">
